@@ -1,8 +1,8 @@
 Package: ordinal
 Type: Package
 Title: Regression Models for Ordinal Data
-Version: 2018.8-25
-Date: 2018-08-25
+Version: 2019.3-9
+Date: 2019-03-09
 Authors@R: person(given="Rune Haubo Bojesen", family="Christensen",
     email="rune.haubo@gmail.com", role=c("aut", "cre"))
 LazyData: true
@@ -26,8 +26,8 @@ License: GPL (>= 2)
 NeedsCompilation: yes
 URL: https://github.com/runehaubo/ordinal
 BugReports: https://github.com/runehaubo/ordinal/issues
-Packaged: 2018-08-25 13:13:27 UTC; rhbc
+Packaged: 2019-03-09 12:03:49 UTC; rhbc
 Author: Rune Haubo Bojesen Christensen [aut, cre]
 Maintainer: Rune Haubo Bojesen Christensen <rune.haubo@gmail.com>
 Repository: CRAN
-Date/Publication: 2018-08-25 22:20:03 UTC
+Date/Publication: 2019-03-09 12:40:03 UTC
