@@ -1,7 +1,7 @@
-de412b5add63eb228c07928bb2f8da68 *DESCRIPTION
+a373f28fede37c04b77ca733a66e6b13 *DESCRIPTION
 9023f060a8aa0d9f16566887e1f561e7 *LICENCE.note
 559ac0624f424a67aee8844691d58994 *NAMESPACE
-bea7ffc7354f783fd6b11b17e85670ef *NEWS
+8199e17b21a58076db2c24214a48fe95 *NEWS
 55659272104a9aad1734d272bd1f3a01 *R/AO.R
 2e4653d22a116710b5592407067a163c *R/clm.R
 68c2622c72a7bb94d9e3cd8f55bcf8d0 *R/clm.Thetamat.R
@@ -37,17 +37,17 @@ e33c96829340e40bd7838024d137ab81 *R/gumbel.R
 330321bee23e85384761aa86179ea288 *R/terms_utils.R
 a6915923a4a0dfb2cac5faf57800db64 *R/utils.R
 7f89868e44455f3fded385b8b39af491 *R/warning_functions.R
-e09d6f46f51f999fde2b42be1a1bb7bc *build/vignette.rds
+0e2e8fc4502cbe7784427a80ab3e557a *build/vignette.rds
 63eb28b797efedb31ad1f5db75ddfa0b *data/income.rda
 de5d075c95248681323ce9e571e7d0a2 *data/soup.rda
 50b83b93508e5c5a9085d5204cb9ff09 *data/wine.rda
 73c90587f400050e6d2d177eefc1bd39 *inst/CITATION
 984e55221eaad9b2be3368cc9a282ff9 *inst/doc/clm_article.R
-0fcdb3edf76224ed888278750324bdac *inst/doc/clm_article.Rnw
-29fc45f84cdfad111021fe907533e14b *inst/doc/clm_article.pdf
+d89a278169dbd268c00ad2ec9c339181 *inst/doc/clm_article.Rnw
+1ccab768188792ca03375f7c6be06c85 *inst/doc/clm_article.pdf
 4b635c0e8e50007e29e94ab28da75f23 *inst/doc/clmm2_tutorial.R
 ddde6e9af6699c2d9c11002d12e3049e *inst/doc/clmm2_tutorial.Rnw
-6a64b3a0af316d2a874c980376fb1495 *inst/doc/clmm2_tutorial.pdf
+4c91418cee679aa35db4e7853cbc0dc2 *inst/doc/clmm2_tutorial.pdf
 0dc6dd5fc752782590a85c3eab31d5fb *man/VarCorr.Rd
 4d295ce70b37b9409b0b74eb6ae7d0b2 *man/addtermOld.Rd
 fbbfa8a549ecc09ad66aa0e00d1f6d1b *man/anovaOld.Rd
@@ -111,10 +111,10 @@ ed362bbfee46a83b45c0958d8a03806c *tests/testthat/test-clm-formula.R
 ff1d040fe6da8b6ffe3e26b2546aa27d *tests/testthat/test-clm-profile.R
 bfa792df07f282e896fb427ed763abb4 *tests/testthat/test-clm.R
 0263b906dbd4420343b72f0b9316ea73 *tests/testthat/test-clmm-checkRanef.R
-bedd89a951b178f200884cb0d508fa06 *tests/testthat/test-contrasts.R
+a9c6572a4ca505408b5ee7204021b905 *tests/testthat/test-contrasts.R
 49fd8f2e430e2be16217acbc1008a209 *tests/testthat/test-misc.R
 234b3c903ae3e070034dff21ff97de82 *tests/testthat/test-utils.R
-0fcdb3edf76224ed888278750324bdac *vignettes/clm_article.Rnw
+d89a278169dbd268c00ad2ec9c339181 *vignettes/clm_article.Rnw
 3fed23e229d83c7f3fb2734e070ff1a3 *vignettes/clm_article_refs.bib
 ddde6e9af6699c2d9c11002d12e3049e *vignettes/clmm2_tutorial.Rnw
 b79878774fe08d5c9e41784df0e084fb *vignettes/ordinal.bib
