@@ -262,3 +262,6 @@ March 04 2010:
 - Implemented flexible link functions for clm()s
 - Added new article submitted to JSS as vignette and moved old vignettes to 
   GitHub
+
+2019-03-09:
+- Massage tests to check out on R-devel
